# NDIAPI

./: .gitignore  AIGSConfig.cmake.in  CMakeLists.txt  README.TXT
CMake/: AIGSCommonBlock.cmake
Examples/: CMakeLists.txt
Examples/NDIQtTrack/: CMakeLists.txt  NDIQtTrack.cxx  NDIQtTrackGUI.cxx  NDIQtTrackGUI.h  NDIQtTrackGUI.ui
Examples/NDITrack/: CMakeLists.txt  NDITrack.cxx
GUI/: CMakeLists.txt
GUI/Qt/: Ascension3DGTrackerSettingsWidget.ui  AuroraTrackerSettingsWidget.ui  CMakeLists.txt  FakeTrackerSettingsWidget.ui  QTracker.cxx  QTracker.h  SpectraTrackerSettingsWidget.ui  SpectraVicraTrackerSettingsWidget.ui  ndXfrms.cxx  ndXfrms.h  vtkAscension3DGTrackerSettingsWidget.cxx  vtkAscension3DGTrackerSettingsWidget.h  vtkAuroraTrackerSettingsWidget.cxx  vtkAuroraTrackerSettingsWidget.h  vtkFakeTrackerSettingsWidget.cxx  vtkFakeTrackerSettingsWidget.h  vtkSpectraTrackerSettingsWidget.cxx  vtkSpectraTrackerSettingsWidget.h  vtkSpectraVicraTrackerSettingsWidget.cxx  vtkSpectraVicraTrackerSettingsWidget.h  vtkTrackerSettingsDialog.cxx  vtkTrackerSettingsDialog.h  vtkTrackerSettingsDialog.ui  vtkTrackerSettingsStructures.h  vtkTrackerWidget.cxx  vtkTrackerWidget.h  vtkTrackerWidgetXfrmCallback.cxx  vtkTrackerWidgetXfrmCallback.h  vtkTrackerWidget_global.h  vtkTrackerXfrmCallback.cxx  vtkTrackerXfrmCallback.h
GUI/Qt/plugin/: CMakeLists.txt  vtkTrackerWidgetPlugin.cxx  vtkTrackerWidgetPlugin.h
GUI/Qt/utilities/: QXfrmDialog.cxx  QXfrmDialog.h  QXfrmDialog.ui  vtkTrackedObject.cxx  vtkTrackedObject.h
Tracking/: CMakeLists.txt  vtkAscension3DGConfig.cxx  vtkAscension3DGConfig.h  vtkAscension3DGTracker.cxx  vtkAscension3DGTracker.h  vtkNDITracker.cxx  vtkNDITracker.h  vtkReplayData.cxx  vtkReplayData.h  vtkReplayTracker.cxx  vtkReplayTracker.h  vtkTracker.cxx  vtkTracker.h  vtkTrackerBuffer.cxx  vtkTrackerBuffer.h  vtkTrackerTool.cxx  vtkTrackerTool.h
Utilities/: NDIAPI.sln
Utilities/MicronTrackerFiles/: CMakeLists.txt  Cameras.cpp  Cameras.h  Collection.cpp  Collection.h  CurrentCameras.cpp  CurrentCameras.h  Facet.cpp  Facet.h  MCamera.cpp  MCamera.h  MTC.h  MTVideo.h  Marker.cpp  Marker.h  MarkerTemplates.cpp  MarkerTemplates.h  Markers.cpp  Markers.h  MicronTracker Demo.ini  Persistence.cpp  Persistence.h  UtilityFunctions.h  Vector.cpp  Vector.h  Xform3D.cpp  Xform3D.h  vtkmicrontrackerfiles.def
Utilities/NDIAPI.Interop/: NDIAPI.Interop.csproj  NDIAPIInterop.cs
Utilities/NDIAPI.Interop/Properties/: AssemblyInfo.cs
Utilities/NDIAPI.Interop_Test/: NDIAPI.Interop_Test.csproj  Program.cs
Utilities/NDIAPI_Test/: NDIAPI_Test.cpp  NDIAPI_Test.vcxproj  stdafx.cpp
Utilities/ascension3DGapi/driveBay/: Readme.txt
Utilities/ascension3DGapi/driveBay/3D Guidance API/: ATC3DG.h  ATC3DG.lib
Utilities/ascension3DGapi/medSafe/: README.rtf
Utilities/ascension3DGapi/trakStar/: Readme.txt
Utilities/ascension3DGapi/trakStar2/3DG API/: ATC3DG.h  ATC3DG.ini  ATC3DG.lib
Utilities/flock/: flockdll.dsp  flockdll.dsw  flocktest.dsp
Utilities/ndicapi/: CMakeLists.txt  NDIAPI.cpp  NDIAPI.h  NDIAPI.vcxproj  ndicapi.c  ndicapi.h  ndicapi_serial.c  stdafx.cpp  vtkndicapi.def
Utilities/polhemus/: polhemus.c  polhemus.def
